# FolderWatcher

./: CMakeLists.txt  FolderWatcher.sln
FolderWatcher/: $RZE52TB.txt  BrowseForFolderClass.h  DetectNewFileClass.cpp  DetectNewFileClass.h  FilesInDirCountClass.cpp  FilesInDirCountClass.h  FolderWatcher.vcxproj  FolderWatcher.vcxproj.filters  FolderWatcherDb.txt  LoadDBClass.cpp  M_CheckEmptyDBClass.cpp  M_CompareVectors.cpp  M_CompareVectors.h  M_CopyVectorClass.cpp  M_CopyVectorClass.h  M_FillFormClass.cpp  M_FillFormClass.h  M_FillStartFormClass.cpp  M_FillStartFormClass.h  M_MenuEditCallBackClass.cpp  M_MenuEditCallBackClass.h  M_SelectFileClass.cpp  M_SelectFileClass.h  M_WriteDBToFileClass.cpp  M_WriteDBToFileClass.h  M_linesCountClass.cpp  M_linesCountClass.h  NewSmallWndClass.cpp  TgClass.cpp  TgClass.h  WND.cpp  main.cpp  resource.h  resource1.h
files/: BrowseForFolderClass.cpp  BrowseForFolderClass.h  DetectNewFileClass.cpp  DetectNewFileClass.h  DisplayPathInfoClass.cpp  DisplayPathInfoClass.h  LoadDBClass.cpp  LoadDBClass.h  M_CheckEmptyDBClass.cpp  M_CheckEmptyDBClass.h  M_CompareVectors.cpp  M_CompareVectors.h  M_CopyVectorClass.cpp  M_CopyVectorClass.h  M_FillFormClass.cpp  M_FillFormClass.h  M_FillStartFormClass.cpp  M_FillStartFormClass.h  M_MenuEditClass.cpp  M_MenuEditClass.h  M_SelectFileClass.h  MenuEditClass.h  NewSmallWndClass.cpp  NewSmallWndClass.h  TgClass.cpp  TranslitClass.h  WND.h  WndFolderWatcherDbPath.txt  WndWatcher Рабочий  Windows раб с ошибками.aps  WndWatcher.aps  WndWatcher.rc  main.cpp
