cmake_minimum_required(VERSION 3.26.3 FATAL_ERROR)

project(FolderWatcher)

add_executable(FolderWatcher FolderWatcher/main.cpp
FolderWatcher/BrowseForFolderClass.cpp
FolderWatcher/DetectNewFileClass.cpp
FolderWatcher/FilesInDirCountClass.cpp
FolderWatcher/LoadDBClass.cpp
FolderWatcher/M_CheckEmptyDBClass.cpp
FolderWatcher/M_CompareVectors.cpp
FolderWatcher/M_CopyVectorClass.cpp
FolderWatcher/M_FillFormClass.cpp
FolderWatcher/M_FillStartFormClass.cpp
FolderWatcher/M_linesCountClass.cpp
FolderWatcher/M_MenuEditCallBackClass.cpp
FolderWatcher/M_SelectFileClass.cpp
FolderWatcher/M_WriteDBToFileClass.cpp
FolderWatcher/NewSmallWndClass.cpp
FolderWatcher/TgClass.cpp
FolderWatcher/TranslitClass.cpp
FolderWatcher/WND.cpp

FolderWatcher/BrowseForFolderClass.h
FolderWatcher/DetectNewFileClass.h
FolderWatcher/FilesInDirCountClass.h
FolderWatcher/LoadDBClass.h
FolderWatcher/M_CheckEmptyDBClass.h
FolderWatcher/M_CompareVectors.h
FolderWatcher/M_CopyVectorClass.h
FolderWatcher/M_FillFormClass.h
FolderWatcher/M_FillStartFormClass.h
FolderWatcher/M_linesCountClass.h
FolderWatcher/M_MenuEditCallBackClass.h
FolderWatcher/M_SelectFileClass.h
FolderWatcher/M_WriteDBToFileClass.h
FolderWatcher/NewSmallWndClass.h
FolderWatcher/TgClass.h
FolderWatcher/TranslitClass.h
FolderWatcher/WND.h
)

